# research-study

./: README.md  analyze_cross_task_output.txt  study_config.py
data_generation/: generate.py
environments/vc_deal_extraction/: README.md  pyproject.toml  vc_deal_extraction.py
environments/vc_deal_extraction/tests/: test_environment.py
environments/vc_deal_math/: README.md  pyproject.toml  vc_deal_math.py
environments/vc_deal_math/tests/: test_environment.py
evaluation/: __init__.py  analyze_cross_task.py  run_baseline.py
tests/: test_analyze_cross_task.py  test_data_generation.py  test_eval.py  test_train.py
training/: run_real.py  smoke_test.py  train_grpo.py
