[project]
name = "vc-deal-extraction"
description = "VC deal extraction (RLVR study Task B): messy funding prose -> 5-field JSON record, graded by the study's pre-registered strict/loose grader"
tags = ["extraction", "json", "synthetic", "single-turn", "train", "eval"]
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "verifiers==0.1.14",
    "datasets",
]

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["vc_deal_extraction.py", "pyproject.toml", "README.md"]

[tool.verifiers.eval]
num_examples = 5
rollouts_per_example = 3
